force-app/main/default/objects/CHSP_Service_Activity_Work_Plan_Record__c/CHSP_Service_Activity_Work_Plan_Record__c.object-meta.xml
<CustomObject>
    <label>CHSP Service Activity Work Plan Record</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>CHSP Service AWP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CHSP Service Activity Work Plan Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>