force-app/main/default/objects/CHSP_Service_Activity_Work_Plan_Record__c/fields/ACPR_ID__c.field-meta.xml
<CustomField>
    <fullName>ACPR_ID__c</fullName>
    <label>ACPR ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>