force-app/main/default/objects/CHSP_Service_Activity_Work_Plan_Record__c/fields/Activity_Work_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_Work_Plan_ID__c</fullName>
    <externalId>true</externalId>
    <label>Activity Work Plan ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>