force-app/main/default/objects/CHSP_Service_Activity_Work_Plan_Record__c/fields/Aged_Care_Planning_Region__c.field-meta.xml
<CustomField>
    <fullName>Aged_Care_Planning_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aged Care Planning Region</label>
    <referenceTo>Aged_Care_Planning_Region__c</referenceTo>
    <relationshipLabel>CHSP Service Activity Work Plan Records</relationshipLabel>
    <relationshipName>CHSP_Service_Activity_Work_Plan_Records</relationshipName>
    <type>Lookup</type>
</CustomField>