force-app/main/default/objects/CHSP_Service_Activity_Work_Plan_Record__c/fields/CHSP_Service_Schedule__c.field-meta.xml
<CustomField>
    <fullName>CHSP_Service_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CHSP Service Schedule</label>
    <referenceTo>CHSP_Service_Schedule__c</referenceTo>
    <relationshipName>CHSP_Service_Activity_Work_Plan_Records</relationshipName>
    <type>Lookup</type>
</CustomField>