force-app/main/default/objects/CHSP_Service_Activity_Work_Plan_Record__c/fields/Managing_Office__c.field-meta.xml
<CustomField>
    <fullName>Managing_Office__c</fullName>
    <label>Managing Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>