force-app/main/default/objects/CHSP_Service_Activity_Work_Plan_Record__c/fields/Program_Schedule_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_Schedule_ID__c</fullName>
    <label>Program Schedule ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>