force-app/main/default/objects/CHSP_Service_Activity_Work_Plan_Record__c/fields/Report_Filter_ID__c.field-meta.xml
<CustomField>
    <fullName>Report_Filter_ID__c</fullName>
    <formula>CASESAFEID(CHSP_Service_Schedule__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Filter ID</label>
    <type>Text</type>
</CustomField>