force-app/main/default/objects/CHSP_Service_Activity_Work_Plan_Record__c/fields/Service_Care_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Care_Sub_Type__c</fullName>
    <label>Service Care Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>