force-app/main/default/objects/CHSP_Service_Activity_Work_Plan_Record__c/fields/Total_Funding__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding__c</fullName>
    <label>Total Funding</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>