force-app/main/default/objects/CHSP_Service_Activity_Work_Plan_Record__c/validationRules/AWP_Activity_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>AWP_Activity_Status</fullName>
    <active>true</active>
    <description>!(ISPICKVAL(Activity_Status__c,&apos;Inactive&apos;)||ISPICKVAL( Activity_Status__c,&apos;Approved&apos;))</description>
    <errorConditionFormula>!(ISPICKVAL(Activity_Status__c,&apos;Inactive&apos;)||ISPICKVAL( Activity_Status__c,&apos;Approved&apos;))</errorConditionFormula>
    <errorDisplayField>Activity_Status__c</errorDisplayField>
    <errorMessage>The activity status is not valid, Please check the line item.</errorMessage>
</ValidationRule>