force-app/main/default/objects/CHSP_Service_Activity_Work_Plan_Record__c/validationRules/AWP_NoCareSubType.validationRule-meta.xml
<ValidationRule>
    <fullName>AWP_NoCareSubType</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Service_Care_Sub_Type__c)</errorConditionFormula>
    <errorDisplayField>Service_Care_Sub_Type__c</errorDisplayField>
    <errorMessage>Service Care Sub type is blank</errorMessage>
</ValidationRule>