force-app/main/default/objects/CHSP_Service_Activity_Work_Plan_Record__c/validationRules/AWP_UpdateServiceTypeLevel.validationRule-meta.xml
<ValidationRule>
    <fullName>AWP_UpdateServiceTypeLevel</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNEW()&amp;&amp;ISCHANGED(Service_Type_Level__c)</errorConditionFormula>
    <errorDisplayField>Service_Type_Level__c</errorDisplayField>
    <errorMessage>Service Type Level cannot be updated.</errorMessage>
</ValidationRule>