force-app/main/default/objects/CHSP_Service_Activity_Work_Plan_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Activity_ID__c</columns>
    <columns>Activity_Start_Date__c</columns>
    <columns>Activity_End_Date__c</columns>
    <columns>Activity_Work_Plan_ID__c</columns>
    <columns>CHSP_Service_Schedule__c</columns>
    <columns>Service_Care_Sub_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>